--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -15,6 +15,8 @@
         <item name="dividerColor">@color/divider</item>
         <item name="iconColor">@color/white</item>
         <item name="nsfwColor">@color/nsfw_tag_color</item>
+        <item name="toolbarStyle">@style/ToolbarLight</item>
+        <item name="toolbarPopupStyle">@style/Theme.AppCompat.Light</item>
         <item name="cardTopBackgroundColor">@color/white</item>
         <item name="cardBackgroundAccentColor">@color/primary_dark</item>
         <item name="cardTopTextColor">@color/gray900</item>
@@ -35,6 +37,8 @@
         <item name="dividerColor">@color/divider</item>
         <item name="iconColor">@color/white</item>
         <item name="nsfwColor">@color/nsfw_tag_color</item>
+        <item name="toolbarStyle">@style/ToolbarDark</item>
+        <item name="toolbarPopupStyle">@style/Theme.AppCompat</item>
         <item name="cardTopBackgroundColor">@color/gray900</item>
         <item name="cardBackgroundAccentColor">@color/gray900</item>
         <item name="cardTopTextColor">@color/white</item>
