--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
         <item name="colorPrimaryLight">@color/material_blue_light</item>
+        <item name="windowBackgroundColor">@color/material_blue_light</item>
         <item name="textColorPrimary">@color/gray900</item>
         <item name="textColorSecondary"></item>
         <item name="textColorHighlight">@color/primary_text</item>
@@ -30,6 +31,7 @@
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
         <item name="colorPrimaryLight">@color/gray700</item>
+        <item name="windowBackgroundColor">@color/gray700</item>
         <item name="textColorPrimary">@color/white</item>
         <item name="textColorSecondary"></item>
         <item name="textColorHighlight">@color/white</item>
