--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,12 +39,12 @@
 
     <style name="LinkMetadataTextViewLight">
         <item name="android:textAppearance">?android:textAppearanceSmall</item>
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">?attr/textColorSecondary</item>
     </style>
 
     <style name="LinkMetadataTextViewDark">
         <item name="android:textAppearance">?android:textAppearanceSmall</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">?attr/textColorPrimary</item>
     </style>
 
     <style name="ProgressDialog" parent="Theme.AppCompat.Dialog">
