--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="android:textColorPrimary">@color/icons</item>
         <item name="android:textColorSecondary">@color/icons</item>
         <item name="actionMenuTextColor">@color/icons</item>
+        <!--<item name="android:background">?attr/colorPrimaryDark</item>-->
     </style>
 
     <style name="BaseThemeLight" parent="Theme.AppCompat.Light.NoActionBar">
