--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -139,7 +139,7 @@
         android:textAlignment="viewStart"
         android:gravity="start"
         android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@color/primary_text"
+        android:textColor="?attr/textColorPrimary"
         android:textColorLink="@color/link_color"
         android:bufferType="spannable"
         tools:text="Lorem ipsum dolor sit amet"
