--- a/app/src/main/res/layout/report_dialog_view_choice_item.xml
+++ b/app/src/main/res/layout/report_dialog_view_choice_item.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/report_other_hint"
         android:includeFontPadding="false"
-        android:textColor="@color/primary_text"
+        android:textColor="?attr/textColorPrimary"
         android:textSize="18sp"
         tools:text="Lorem ipsum" />
 
