--- a/app/src/main/res/layout/subscription_manager_item.xml
+++ b/app/src/main/res/layout/subscription_manager_item.xml
@@ -31,7 +31,7 @@
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text"
+            android:textColor="?attr/textColorPrimary"
             tools:text="AskReddit" />
 
         <TextView
