--- a/app/src/main/res/layout/subreddit_rule.xml
+++ b/app/src/main/res/layout/subreddit_rule.xml
@@ -19,7 +19,7 @@
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/secondary_text"
+        android:textColor="?attr/textColorSecondary"
         android:textSize="12sp"
         android:visibility="gone"
         tools:text="posts only" />
