--- a/app/src/main/res/layout/link_options_bar.xml
+++ b/app/src/main/res/layout/link_options_bar.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_reply"
             android:src="@drawable/ic_reply_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
@@ -39,7 +39,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_upvote"
             android:src="@drawable/ic_arrow_upward_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
@@ -57,7 +57,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_downvote"
             android:src="@drawable/ic_arrow_downward_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
@@ -75,7 +75,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_save"
             android:src="@drawable/ic_save_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
@@ -93,7 +93,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_share"
             android:src="@drawable/ic_share_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
@@ -111,7 +111,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_hide"
             android:src="@drawable/ic_close_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
@@ -129,7 +129,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/action_report"
             android:src="@drawable/ic_report_black_24dp"
-            android:tint="@color/secondary_text" />
+            android:tint="?attr/textColorSecondary" />
 
     </FrameLayout>
 
