--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -7,8 +7,8 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
-        <item name="colorPrimaryLight">@color/material_blue_light</item>
-        <item name="windowBackgroundColor">@color/material_blue_light</item>
+        <item name="colorPrimaryLight">@color/bluegrey_100</item>
+        <item name="windowBackgroundColor">@color/bluegrey_100</item>
         <item name="textColorPrimary">@color/gray900</item>
         <item name="textColorSecondary"></item>
         <item name="textColorHighlight">?attr/textColorPrimary</item>
