actually specify textColorSecondary

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <!-- Standard colors -->
     <color name="white">#ffffff</color>
+    <color name="dim_gray">#727272</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
 
