--- a/app/src/main/res/drawable/rule_name_bg.xml
+++ b/app/src/main/res/drawable/rule_name_bg.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/divider" />
+        android:color="?attr/dividerColor" />
 
     <padding
         android:top="8dp"
