--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,6 @@
     <color name="transparent">#00000000</color>
 
     <!-- States -->
-    <color name="disabled">@color/gray70</color>
-    <color name="gray70">#c0cace</color>
     <color name="indentation">@color/primary</color>
     <color name="reddit_orange_full">@color/reddit_orange</color>
     <color name="reddit_orange_lighter">#ffcbb8</color>
@@ -22,11 +20,11 @@
     <color name="reddit_blue_lighter">#c9c9ff</color>
     <color name="reddit_gold">#f6e600</color>
     <color name="author_op_background">#0055df</color>
-    <color name="author_op_text">#ffffff</color>
+    <color name="author_op_text">@color/white</color>
     <color name="author_moderator_background">#228822</color>
-    <color name="author_moderator_text">#ffffff</color>
+    <color name="author_moderator_text">@color/white</color>
     <color name="author_admin_background">#ff0011</color>
-    <color name="author_admin_text">#ffffff</color>
+    <color name="author_admin_text">@color/white</color>
     <color name="markdown_quote_block">@color/bluegrey_100</color>
     <color name="comment_controversiality_indicator">#ff5252</color>
     <color name="nsfw_tag_color">#d10023</color>
