--- a/app/src/main/res/layout/navigation_tab_layout.xml
+++ b/app/src/main/res/layout/navigation_tab_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/tab_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primary"
+    android:background="?attr/colorPrimary"
     app:tabTextColor="?attr/textColorSecondary"
     app:tabSelectedTextColor="?attr/textColorPrimary"
     app:tabMode="scrollable" />
