--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,6 @@
 <resources>
     <!-- icon height in navigation drawer is 20dp w/ 6dp padding -->
     <!-- http://www.materialpalette.com/blue-grey/red -->
-    <color name="bluegrey_100">#cfd8dc</color>
-    <color name="primary">#607d8b</color>
     <color name="primary_dark">#455a64</color>
 
     <!-- Standard colors -->
@@ -24,12 +22,12 @@
     <color name="author_moderator_text">@color/white</color>
     <color name="author_admin_background">#ff0011</color>
     <color name="author_admin_text">@color/white</color>
-    <color name="markdown_quote_block">@color/bluegrey_100</color>
+    <color name="markdown_quote_block">@color/bluegrey000</color>
     <color name="comment_controversiality_indicator">#ff5252</color>
     <color name="nsfw_tag_color">#d10023</color>
     <color name="link_color">#0000ee</color>
     <color name="link_saved_color">@color/reddit_blue_full</color>
-    <color name="ic_launcher_background">@color/bluegrey_100</color>
+    <color name="ic_launcher_background">@color/bluegrey000</color>
 
     <!-- reddit color scheme -->
     <!-- https://www.reddit.com/about/alien/ -->
