--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -24,7 +24,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_dark" />
+            <solid android:color="?attr/colorPrimaryDark" />
             <corners android:radius="2dp" />
         </shape>
     </item>
