--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -24,7 +24,7 @@
             android:paddingRight="@dimen/link_list_item_margin_horizontal"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:background="@color/primary_dark">
+            android:background="?attr/colorPrimaryDark">
 
             <TextView
                 android:id="@+id/comment_link_title"
