--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -11,7 +11,7 @@
         android:paddingRight="@dimen/link_list_item_margin_horizontal"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:background="@color/primary_dark">
+        android:background="?attr/colorPrimaryDark">
 
         <TextView
             android:id="@+id/conversation_subject"
@@ -65,7 +65,7 @@
                 android:id="@+id/message_indentation"
                 android:layout_width="@dimen/comment_indentation_margin"
                 android:layout_height="match_parent"
-                android:background="@color/primary_dark" />
+                android:background="?attr/colorPrimaryDark" />
 
             <LinearLayout
                 android:orientation="vertical"
