--- a/app/src/main/res/drawable/author_moderator_bg.xml
+++ b/app/src/main/res/drawable/author_moderator_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/author_moderator_background" />
+        android:color="@color/forest_green" />
 
     <corners
         android:radius="@dimen/distinguished_author_bg_corners" />
