--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -4,13 +4,14 @@
     <style name="StandardThemeColors" parent="AppThemeLight">
         <!-- AppCompat theme attributes -->
         <item name="colorPrimary">@color/bluegrey100</item>
-        <item name="colorPrimaryDark">?attr/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/bluegrey700</item>
         <item name="colorAccent">@color/redA200</item>
         <!-- Custom attributes -->
         <item name="colorPrimaryLight">@color/bluegrey100</item>
         <item name="windowBackgroundColor">@color/bluegrey100</item>
         <item name="textColorPrimary">@color/gray900</item>
         <item name="textColorSecondary">@color/dim_gray</item>
+        <item name="textColorInverse">@color/white</item>
         <item name="textColorHighlight">?attr/textColorPrimary</item>
         <item name="textColorLink">@color/link_color</item>
         <item name="dividerColor">#1e000000</item> <!-- 12% black -->
@@ -20,6 +21,7 @@
         <item name="toolbarPopupStyle">@style/Theme.AppCompat.Light</item>
         <item name="contentBackgroundColorPrimary">?attr/colorPrimary</item>
         <item name="contentBackgroundColorSecondary">@color/white</item>
+        <item name="authorDecoratedTextColor">@color/white</item>
         <item name="cardTopBackgroundColor">@color/white</item>
         <item name="cardBackgroundAccentColor">?attr/colorPrimaryDark</item>
         <item name="cardTopTextColor">@color/gray900</item>
@@ -37,6 +39,7 @@
         <!-- TODO double-check these text colors are actually to spec -->
         <item name="textColorPrimary">@color/white</item>
         <item name="textColorSecondary">@color/gray300</item>
+        <item name="textColorInverse">@color/gray900</item>
         <item name="textColorHighlight">@color/white</item>
         <item name="textColorLink">@color/link_color</item>
         <item name="dividerColor">#33ffffff</item> <!-- 20% white -->
@@ -46,6 +49,7 @@
         <item name="toolbarPopupStyle">@style/Theme.AppCompat</item>
         <item name="contentBackgroundColorPrimary">?attr/colorPrimary</item>
         <item name="contentBackgroundColorSecondary">@color/gray900</item>
+        <item name="authorDecoratedTextColor">@color/white</item>
         <item name="cardTopBackgroundColor">@color/gray900</item>
         <item name="cardBackgroundAccentColor">@color/gray900</item>
         <item name="cardTopTextColor">@color/white</item>
